--- a/la_controllers.yaml
+++ b/la_controllers.yaml
@@ -1,9 +1,9 @@
 left_pa10_arm_controller:
   joints:
-    - left_arm_0_joint
-    - left_arm_1_joint
-    - left_arm_2_joint
-    - left_arm_3_joint
-    - left_arm_4_joint
-    - left_arm_5_joint
-    - left_arm_6_joint
+    - la_arm_0_joint
+    - la_arm_1_joint
+    - la_arm_2_joint
+    - la_arm_3_joint
+    - la_arm_4_joint
+    - la_arm_5_joint
+    - la_arm_6_joint
