Forked to create independent version 7c

--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package>
-  <name>pa10_7a_description</name>
+  <name>pa10_7c_description</name>
   <version>0.0.1</version>
   <description>The mitsubishi pa10 7a description package</description>
 
