Removed pa10_7a and left right references

--- a/package.xml
+++ b/package.xml
@@ -2,7 +2,7 @@
 <package>
   <name>pa10_7c_description</name>
   <version>0.0.1</version>
-  <description>The mitsubishi pa10 7a description package</description>
+  <description>The mitsubishi pa10 7c description package</description>
 
   <maintainer email="gwalck@techfak.uni-bielefeld.de">Guillaume Walck</maintainer>
 
