--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package>
   <name>pa10_7c_description</name>
-  <version>0.0.1</version>
+  <version>0.0.2</version>
   <description>The mitsubishi pa10 7c description package</description>
 
   <maintainer email="gwalck@techfak.uni-bielefeld.de">Guillaume Walck</maintainer>
@@ -13,7 +13,9 @@
  
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>xacro</build_depend>
+  <run_depend>urdf</run_depend>
   <run_depend>xacro</run_depend>
-  <run_depend>sr_mechanism_model</run_depend>
+  <run_depend>position_controllers</run_depend>
+  <run_depend>gazebo_ros_control</run_depend>
 
 </package>
